src/objects/BR_Event__c.object
<CustomObject>

    <fields>
        <fullName>BR_Events_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>BR_Events_Zone__c</referenceTo>
        <relationshipLabel>BR Events</relationshipLabel>
        <relationshipName>BR_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_not_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment not required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_of_attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Zero means unlimited.</inlineHelpText>
        <label>Limit of attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Image_Filename__c</fullName>
        <label>List Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Main_Image_Filename__c</fullName>
        <label>Main Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publicly_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AC Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Venue_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>